--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-
 html,
 body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
 }
 
 p {
     margin: 0;
+    text-transform: capitalize;
+}
+
+li {
+    font-size: small;
+}
+
+hr {
+    width: 60%;
 }
 
 .navbar {
@@ -45,7 +51,7 @@ p {
 #sidebar {
     position: fixed;
     background-color: white;
-    left: -220px; 
+    left: -185px; 
     width: 260px;
     height: fit-content;
     border-radius: 0 10px 10px 10px;
@@ -98,12 +104,8 @@ span:nth-child(3) {
     margin: 1rem;
 }
 
-li {
-    font-size: small;
-}
-
-hr {
-    width: 85%;
+#sidebar-task-title, #task-title {
+    font-weight: bold;
 }
 
 .main-content {
